Fixing the gap in the events buttons.

--- a/assets/css/scss/the-events-calendar.scss
+++ b/assets/css/scss/the-events-calendar.scss
@@ -442,6 +442,10 @@ h2.tribe-events-page-title {
     box-shadow: 2px 2px 0 0 #CE9100;
 	padding: 0.5em;
     margin: 0em 0 1em 0;
+
+	br {
+		display:none;
+	}
 }
 .tribe-events-tickets {
 	background: #ffffff !important;
